assets/css/styles.css
/* ... */
#triangle_four {
	bottom: 912px;
	color: #FF9800;
	display: none;
	font-size: 100px;
	height: 100px;
	margin-left: calc(50% + 14.5px);
	overflow: hidden;
	position: absolute;
	width: 100px;
	z-index: 2;
}

#triangle_five {
	bottom: 560px;
	color: #673AB7;
	display: none;
	font-size: 100px;
	height: 100px;
	margin-left: calc(50% - 50.5px);
	overflow: hidden;
	position: absolute;
	width: 100px;
	z-index: 2;
}

#triangle_six {
	bottom: 422px;
	color: limegreen;
	display: none;
	font-size: 100px;
	height: 100px;
	margin-left: calc(50% + 14.5px);
	overflow: hidden;
	position: absolute;
	width: 100px;
	z-index: 2;
}

@media only screen and (min-width: 1600px) {
	#triangle_one {
		display: block;
	}

	#triangle_two {
		display: block;
	}

	#triangle_three {
		display: block;
	}

	#circle_one {
		display: block;
	}

	#circle_two {
		display: block;
	}

	#circle_three {
		display: block;
	}
}

.team-header {
	color: grey;
	font-size: 2vh;
	margin-left: 10%;
	margin-right: 10%;
	text-align: center;
}

.company-director {
	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	background-color: rgba(230, 230, 230, 1);
	border-radius: 1vh;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	height: 30vh;
	margin-left: calc(50% - 15vh);
	margin-top: calc(35vh - 30vh);
	width: 30vh;
}

.operations-director {
	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	background-color: rgba(230, 230, 230, 1);
	border-radius: 1vh;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	height: 30vh;
	margin-left: calc(50% - 15vh);
	margin-top: 5vh;
	width: 30vh;
}

.company-coder {
	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	background-color: rgba(230, 230, 230, 1);
	border-radius: 1vh;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	height: 30vh;
	margin-left: calc(50% - 15vh);
	margin-top: 5vh;
	width: 30vh;
}

.company-gfx {
	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	background-color: rgba(230, 230, 230, 1);
	border-radius: 1vh;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	height: 30vh;
	margin-left: calc(50% - 15vh);
	margin-top: 5vh;
	width: 30vh;
}

.employee-image {
	font-size: 10vh;
	margin: 0;
	padding-top: 3vh;
	text-align: center;
}

.employee-name {
	font-size: 3vh;
	margin: 0;
	text-align: center;
}

.employee-desc {
	font-size: 2vh;
	margin: 0;
	text-align: center;
}

.employee-contact {
	font-size: 3vh;
	margin: 0;
	padding-top: 1vh;
	text-align: center;
}

.link {
	color: black;
	text-decoration: none;
}

.link:hover {
	color: black;
	text-decoration: none;
}

.contact {
	background-color: #F7F7FF;
	font-family: 'Lato', sans-serif;
	font-size: 1.2rem;
	min-height: calc(100vh - 46vh);
	padding: 4vh 0vw;
	text-align: center;
	max-width: 100vw;
	overflow-y: hidden;
}

.contact-container {
	min-height: 58vh;
	width: 100%;
}

.contact-container table {
	width: 100%;
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	margin: 25px auto;
	border-collapse: collapse;

	tr {
		&:hover {
			background: #F4F4F4;
		}
	}

	th,
	td {
		color: #999999;
		border-collapse: collapse;
	}

	th {
		background: #F26419;
		text-transform: uppercase;
		font-size: 12px;

		&.last {
			border-right: none;
		}
	}
}

.contact-page-header {
	font-size: 3vh;
	margin: 0;
	margin-top: 1vh;
}

.contact-top {
	-ms-flex-line-pack: start;
	align-content: flex-start;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-ms-flex-wrap: nowrap;
	flex-wrap: nowrap;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
}

.contact-top img {
	height: auto;
	margin: 2vh 0;
	width: 66%;
}

.business-hours-header {
	color: #24292E;
	font-family: 'Roboto', sans-serif;
	font-size: 1.75rem;
	font-variant: small-caps;
	margin-top: 3vh;
	text-align: center;
}

.contact-page-text {
	color: rgba(36, 41, 46, 0.85);
	font-family: 'Lato', sans-serif;
	font-size: 1rem;
	padding-bottom: 2vh;
	margin-left: 10vw;
	margin-right: 10vw;
}

.contact-form {
	-moz-user-select: none;
	-ms-user-select: none;
	-webkit-user-select: none;
	margin: 0 auto;
	padding: 8vh 0;
	text-align: left;
	user-select: none;
	width: 66%;
}

input[type=text] {
	font-size: 2vh;
}

input[type=text],
select,
textarea {
	-webkit-box-sizing: border-box;
	border: 1px solid #CCCCCC;
	border-radius: 0.5vh;
	box-sizing: border-box;
	margin-bottom: 1vh;
	margin-top: 1vh;
	padding: 1vh;
	resize: vertical;
	width: 100%;
}

input[type=number] {
	font-size: 2vh;
}

input[type=number],
select,
textarea {
	-webkit-box-sizing: border-box;
	border: 1px solid #CCCCCC;
	border-radius: 0.5vh;
	box-sizing: border-box;
	margin-bottom: 1vh;
	margin-top: 1vh;
	padding: 1vh;
	resize: vertical;
	width: 100%;
}

input[type=submit] {
	-o-transition: background-color 0.6s ease;
	-webkit-transition: background-color 0.6s ease;
	background-color: rgba(230, 230, 230, 1);
	border: none;
	border-radius: 0.5vh;
	color: black;
	cursor: pointer;
	padding: 1vh;
	transition: background-color 0.6s ease;
}

input[type=submit]:hover {
	-o-transition: background-color 0.6s ease;
	-webkit-transition: background-color 0.6s ease;
	background-color: rgba(220, 220, 220, 1);
	transition: background-color 0.6s ease;
}

.container {
	border-radius: 1vh;
	margin: 0;
	padding: 1vh;
}
/* ... */

